--- a/index.html
+++ b/index.html
@@ -17,86 +17,122 @@
 <style>
     * {
         font-family: 'YS Text', "sans-serif";
+        -webkit-text-size-adjust: none;
     }
+
     html {
         max-width: 900px;
         margin: 0 auto;
     }
+
     body {
         margin: 40px;
     }
-    .logo  {
+
+    .logo {
         height: 30px;
         margin: 40px 0;
         background: url(https://konstantinov90.github.io/shri_2018_css_homework/img/zen_logo@3x.png) no-repeat;
     }
+
     .zen {
         display: grid;
         grid-template-columns: repeat(6, 1fr);
         grid-gap: 29px 16px;
-        align-items: end;
-
+        grid-auto-flow: dense;
     }
+
     .zen__card {
         height: 100%;
         display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: min-content 1fr auto;
         grid-auto-flow: row dense;
-        grid-gap: 8px;
+        grid-template-columns: 1fr;
+        grid-template-rows: min-content 1fr;
     }
-    .zen__card_m {
-        grid-template-rows: minmax(min-content, 0.5rem) auto 62px;
-    }
-    .zen__card_m picture {
-        align-self: end;
-    }
-    .zen__card img {
-        width: 100%;
-    }
-    .zen__card div {
-        max-height: 3rem;
-        background: white;
-        position: relative;
-    }
-    .zen__card div > h3 {
-        margin: 0;
-        padding-bottom: 8px;
-        z-index: 100;
-        max-height: 4rem;
-        background: white;
-        overflow: hidden;
-        display: block;
-    }
-    .zen__card p {
-        margin: 0;
-        min-height: 95%;
-        height: 3.5rem;
-        overflow: hidden;
-    }
+
     .zen__card_s {
         grid-column: span 2;
     }
+
     .zen__card_m {
         grid-column: span 3;
+        grid-template-rows: minmax(min-content, 0.5rem) auto calc(3.1rem + 16px);
     }
+
     .zen__card_l {
         grid-column: span 6;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: min-content 1fr;
         align-content: center;
+        grid-column-gap: 16px;
     }
-    .zen__card_l picture {
+
+    .zen__card img {
+        width: 100%;
+    }
+
+    .zen__card > div {
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+    }
+
+    .zen__card > div > h3 {
+        line-height: 1rem;
+        max-height: 3rem;
+        margin: 0;
+        border-bottom: solid 16px white;
+        z-index: 100;
+        background: white;
+        overflow: hidden;
+        display: block;
+        position: relative;
+    }
+
+    .zen__card > p {
+        margin: 0;
+        overflow: hidden;
+        max-height: 100%;
+        line-height: 1rem;
+        padding-top: 16px;
+    }
+    .zen__card_m > p {
+        max-height: calc(3rem + 16px);
+    }
+    .zen__card_s > p {
+        padding-top: 0;
+    }
+
+    .zen__card_m > div,
+    .zen__card_s_img > div {
+        max-height: calc(2rem + 16px);
+        overflow: visible;
+    }
+
+    .zen__card_m > picture {
+        align-self: end;
+    }
+
+    .zen__card_l > picture {
         grid-column: span 2;
         grid-row: span 2;
         order: 1;
     }
-    .zen__card_l div {
+
+    .zen__card_l > div {
         order: 2;
     }
-    .zen__card_l p {
+
+    .zen__card_l > p {
         order: 3;
     }
+
+    @media (min-width: 600px) {
+        .zen__card_l > p {
+            padding-top: 0;
+        }
+    }
+
     @media (max-width: 600px) {
         * {
             font-size: 15px;
@@ -104,36 +140,42 @@
         .zen {
             grid-template-columns: repeat(4, 1fr);
         }
-        .zen__card_s, .zen__card_m {
+        .zen__card_s,
+        .zen__card_m {
             grid-column: span 2;
         }
         .zen__card_l {
             grid-column: span 4;
-            grid-template-columns: 1fr;
+            grid-template-columns: repeat(4, 1fr);
         }
-        .zen__card_l div {
+        .zen__card_l > picture {
+            grid-column: span 4;
+        }
+        .zen__card_l > div {
             order: 1;
             grid-column: span 4;
         }
-        .zen__card_l p {
+        .zen__card_l > p {
             grid-column: span 4;
         }
-    }
-    @media (max-width: 400px) {
-        * {
-            font-size: 13px;
+        .zen__card_l > p,
+        .zen__card_s > p {
+            max-height: unset;
+            height: 100%;
         }
+    }
+
+    @media (max-width: 400px) {
         body {
             margin: 20px;
         }
         .zen {
             grid-template-columns: 1fr;
         }
-        .zen__card_s, .zen__card_m, .zen__card_l {
+        .zen__card_s,
+        .zen__card_m,
+        .zen__card_l {
             grid-column: span 1;
-        }
-        .zen__card_s p {
-            height: auto;
         }
     }
 </style>
