--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
     }
     .zen__card_s > p {
         padding-top: 0;
+        height: 10rem;
+        min-height: 100%;
     }
 
     .zen__card_m > div,
@@ -163,7 +165,7 @@
         .zen__card_l > p,
         .zen__card_s > p {
             max-height: unset;
-            height: 100%;
+            /* height: 100%; */
         }
     }
 
