--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="robots" content="noindex">
     <title>ZEN</title>
-    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
-    <link href="/fonts/fonts.css" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <link href="fonts/fonts.css" rel="stylesheet">
 </head>
 
 <body>
